# beginnerpy.com

./: .gitignore  Dockerfile  app.py  docker-compose.yml  models.py  pyproject.toml  requirements.txt  site.config
.github/workflows/: workflow.yaml
beginnerpy/: __init__.py  __main__.py  app.py  func.py  models.py
beginnerpy/bot/: challenges.py  rules.py
beginnerpy/static/ckeditor5/: README.md  package.json
beginnerpy/static/ckeditor5/src/: ckeditor.js
beginnerpy/static/css/: prism.css  styles.css
beginnerpy/static/js/: category_editor.js  discord_editor.js  main.js  richtext.js
beginnerpy/templates/: _sidenav.html  _toolbar.html  category.html  index.html  layout.html  page.html  register.html
beginnerpy/templates/admin/: categories.html  category.html  create_category.html  create_content.html  edit_category.html  edit_item.html  users.html
beginnerpy/templates/bot/: challenge_list.html  edit_rule.html
deployment/: deployment.yml  load-balancer.yml  production-issuer.yml  site.yml  staging-issuer.yml
static/ckeditor5/sample/: index.html
static/css/: prism.css  styles.css
static/js/: main.js  prism.js  prism.min.js
templates/: _nav.html  _sidenav.html  category.html  index.html  layout.html  login.html  page.html
templates/admin/: admin.html  category.html  create_category.html  create_content.html  db.html  edit_category.html  edit_content.html  edit_item.html
