[tool.poetry]
name = "beginnerpy.com"
version = "0.1.0"
description = ""
authors = ["Zech Zimmerman <hi@zech.codes>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
Flask-Login = "^0.5.0"
Flask-WTF = "^0.14.3"
Flask-Bcrypt = "^0.7.1"
email-validator = "^1.1.0"
psycopg2-binary = "^2.8.5"
SQLAlchemy = "^1.3.16"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
